Fix mobile layout issue by removing column-gap from the mobile view

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -665,7 +665,7 @@ main form .panel-wrapper {
 main .form form .panel-wrapper{
   display: grid;
   grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
-  gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
+  gap: var(--form-field-vert-gap) 0;
 }
 
 main .form form .repeat-wrapper{
@@ -698,6 +698,10 @@ main .form form .wizard.left .panel-wrapper{
     main .form form .file-wrapper,
     main .form form .panel-wrapper {
         flex: 1 0 100%;
+    }
+
+    main .form form .panel-wrapper{
+        gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
     }
 
     main .form form .panel-wrapper {
